# io-career

./: CHANGELOG.md  LICENSE  README.md  codex_super_prompt_io_career.md  pyproject.toml  requirements.txt
.github/workflows/: daily_update.yml  deploy_site.yml
data/raw/: 2026-03-09_crawled_active_snapshot.json  2026-03-10_crawled_active_snapshot.json  2026-03-11_crawled_active_snapshot.json  2026-03-12_crawled_active_snapshot.json  2026-03-13_crawled_active_snapshot.json  2026-03-14_crawled_active_snapshot.json  2026-03-15_crawled_active_snapshot.json  2026-03-16_crawled_active_snapshot.json  2026-03-17_crawled_active_snapshot.json  2026-03-18_crawled_active_snapshot.json  2026-03-19_crawled_active_snapshot.json  2026-03-20_crawled_active_snapshot.json  2026-03-21_crawled_active_snapshot.json  2026-03-22_crawled_active_snapshot.json  2026-03-23_crawled_active_snapshot.json  2026-03-24_crawled_active_snapshot.json  2026-03-25_crawled_active_snapshot.json  2026-03-26_crawled_active_snapshot.json  2026-03-27_crawled_active_snapshot.json  2026-03-28_crawled_active_snapshot.json  2026-03-29_crawled_active_snapshot.json  2026-03-30_crawled_active_snapshot.json  2026-03-31_crawled_active_snapshot.json  2026-04-01_crawled_active_snapshot.json  (+91 more)
docs/: ARCHITECTURE.md  DATA_SCHEMA.md  DEPLOYMENT.md  OPERATION_GUIDE.md  PROJECT_OVERVIEW.md  SOURCES.md
scripts/: run_daily.ps1
site/: index.html  script.js  style.css
site/data/: jobs.json  (+1 more)
sources/: aggregator_sources.yaml  official_sources.yaml
tests/: test_diff.py  test_exporters.py  test_parsers.py  test_registry.py
(+186 files in other folders)
